choose-mirror (0.035) UNRELEASED; urgency=low

  * Translations
    - Bartosz Fenski: Updated Polish translation (pl.po)
    - Giuseppe Sacco: updated italian translation (it.po)
    - Håvard Korsvoll: Updated Norwegian, nynorsk translation (nn.po).
    - Andre Dahlqvist: Update Swedish translation (sv.po)
    - Bart Cornelis: Update Dutch translation (nl.po) 
    - Jure Cuhalev: Update Slovenian translation (sl.po) 
    - Ming Hua: Initial and updated Traditional Chinese translation
                (zh_TW.po), by Tetralet

 -- Bart Cornelis <cobaco@linux.be>  Thu, 26 Feb 2004 09:09:05 +0100

choose-mirror (0.034) unstable; urgency=low

  * Joshua Kwan
    - When popening into a FILE*, pclose it, don't fclose it.
    - Don't frob with memory that's not yours: suite[strlen(suite)] ->
      suite[strlen(suite) - 1].
    - Fix detection of proxy usage (or lack thereof), we were launching
      'http_proxy= wget ...' and that actually _set_ the variable and broke
      busybox's wget because '' is not a valid proxy.
  * Stephen R. Marenka
    - Add libdebian-installer-dev to build-deps.

 -- Joshua Kwan <joshk@triplehelix.org>  Mon, 23 Feb 2004 11:32:52 -0800

choose-mirror (0.033) unstable; urgency=low

  * Joey Hess
    - Fixed two templates from type "test" to "text". Thank you, lintian.
  
 -- Joey Hess <joeyh@debian.org>  Sun, 22 Feb 2004 18:53:40 -0500

choose-mirror (0.032) unstable; urgency=low

  * Rebuild posibly fixing #233988.

  * Translations
    - Javier Fernandez-Sanguino: Updated Spanish translation (es.po)
    - Changwoo Ryu             : Updated Korean translation (ko.po)

 -- Joey Hess <joeyh@debian.org>  Sun, 22 Feb 2004 01:27:05 +0100

choose-mirror (0.031) unstable; urgency=low

  * Translations:
    - Miguel Figueiredo	    : Updated Portuguese translation (pt.po)
    - Kenshi Muto           : Updated Japanese translation (ja.po)
    - Claus Hindsgaul       : Updated Danish translation (da.po)