@@ -1,5 +1,8 @@
 choose-mirror (0.035) UNRELEASED; urgency=low
 
+  * Joey Hess
+    - bumped the mirror questions back up to high
+
   * Translations
     - Bartosz Fenski: Updated Polish translation (pl.po)
     - Giuseppe Sacco: updated italian translation (it.po)
